--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple note taker with starter code giver for boot camp",
   "main": "server.js",
   "scripts": {
+    "dev" : "npx nodemon server",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
